<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddVehicleFragment">

    <LinearLayout
        android:id="@+id/content_add_vehicle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_register_text_view"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:text="@string/title_add_register" />

            <EditText
                android:id="@+id/add_register_edit_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_36dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:background="@color/gray_EEEEEE"
                tools:text="ATJ-89" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_type_text_view"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:text="@string/title_add_type_vehicle" />

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/option_car"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr"
                    android:text="@string/title_add_type_vehicle_car"
                    android:padding="@dimen/dimen_8dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/option_motorcycle"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/title_add_type_vehicle_motorcycle"
                    android:padding="@dimen/dimen_8dp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_cylinder_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/add_cylinder_capacity_text_view"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:text="@string/title_add_cylinder_capacity" />

            <EditText
                android:id="@+id/add_cylinder_capacity_edit_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_36dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:background="@color/gray_EEEEEE"
                tools:text="ATJ-89" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_vehicle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:gravity="center"
        android:text="@string/title_save_vehicle"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>